@@ -13,7 +13,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.function.BiConsumer;
 import java.util.logging.Level;
-import java.util.stream.Collectors;
 
 import javax.security.auth.login.LoginException;
 
@@ -50,7 +49,7 @@ public class Wikibot extends WMFWiki {
     		"rvprop", "timestamp|content",
     		"rvslots", "main"
     	);
-		List<String> stringified = pageids.stream().map(Object::toString).collect(Collectors.toList());
+		List<String> stringified = pageids.stream().map(Object::toString).toList();
 		return getListedContent(new HashMap<>(getparams), stringified, "getContents", "pageids", this::parseContentLine);
 	}
     
@@ -61,7 +60,7 @@ public class Wikibot extends WMFWiki {
     		"rvprop", "timestamp|content",
     		"rvslots", "main"
     	);
-		List<String> stringified = revids.stream().map(Object::toString).collect(Collectors.toList());
+		List<String> stringified = revids.stream().map(Object::toString).toList();
 		return getListedContent(new HashMap<>(getparams), stringified, "getContents", "revids", this::parseContentLine);
     }
 	
@@ -135,6 +134,7 @@ public class Wikibot extends WMFWiki {
 			}
 			
 			String line = makeApiCall(getparams, postparams, localCaller);
+			detectUncheckedErrors(line, null, null);
 			
 			if (line.contains("<continue ")) {
 				int a = line.indexOf("<continue ") + 9;
@@ -222,6 +222,7 @@ public class Wikibot extends WMFWiki {
 		Map<String, Object> postparams = new HashMap<>();
 		postparams.put("text", text);
 		String line = makeApiCall(getparams, postparams, "expandTemplates");
+		detectUncheckedErrors(line, null, null);
 		
 		int a = line.indexOf("<wikitext ");
 		a = line.indexOf(">", a) + 1;
@@ -428,8 +429,10 @@ public class Wikibot extends WMFWiki {
 		postparams.put("token", getToken("csrf"));
 		
 		String response = makeApiCall(getparams, postparams, "review");
-		checkErrorsAndUpdateStatus(response, "review");
-		log(Level.INFO, "review", "Successfully reviewed revision " + rev.getID() + " of page " + rev.getTitle());
+		
+		if (checkErrorsAndUpdateStatus(response, "review", null, null)) {
+			log(Level.INFO, "review", "Successfully reviewed revision " + rev.getID() + " of page " + rev.getTitle());
+		}
 	}
     
     public List<Map<String, String>> getPageProps(List<String> pages) throws IOException
@@ -448,6 +451,7 @@ public class Wikibot extends WMFWiki {
             postparams.put("titles", temp);
             String caller = String.format("getPageProps (%d/%d)", i + 1, chunks.size());
             String line = makeApiCall(getparams, postparams, caller);
+            detectUncheckedErrors(line, null, null);
             resolveNormalizedParser(pages2, line);
             if (isResolvingRedirects())
                 resolveRedirectParser(pages2, line);
