@@ -26,6 +26,8 @@ import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
+import javax.security.auth.login.AccountLockedException;
+
 import org.apache.commons.cli.CommandLine;
 import org.apache.commons.cli.DefaultParser;
 import org.apache.commons.cli.HelpFormatter;
@@ -139,7 +141,7 @@ public final class AuthorityControl {
 					errors.add(page.getTitle());
 					t.printStackTrace();
 					
-					if (t instanceof AssertionError) {
+					if (t instanceof AccountLockedException | t instanceof AssertionError) {
 						break;
 					}
 				}
@@ -278,14 +280,19 @@ public final class AuthorityControl {
 				.map(template -> String.format("'%s'", template))
 				.collect(Collectors.joining(","));
 			
-			var query = "SELECT DISTINCT(page_id), ips_site_page"
-				+ " FROM page"
-				+ " INNER JOIN pagelinks on pl_from = page_id"
-				+ " INNER JOIN wb_items_per_site on page_namespace = 0 AND CONCAT('Q', ips_item_id) = page_title"
-				+ " WHERE pl_from_namespace = 0"
-				+ " AND ips_site_id = 'plwiki'"
-				+ " AND pl_namespace = 120" // Property
-				+ " AND pl_title in (" + properties + ");";
+			var query = String.format("""
+				SELECT
+					DISTINCT(page_id),
+					ips_site_page
+				FROM page
+					INNER JOIN pagelinks ON pl_from = page_id
+					INNER JOIN wb_items_per_site ON page_namespace = 0 AND CONCAT('Q', ips_item_id) = page_title
+				WHERE
+					pl_from_namespace = 0 AND
+					ips_site_id = 'plwiki' AND
+					pl_namespace = 120 AND
+					pl_title in (%s);
+				""", properties);
 			
 			var rs = connection.createStatement().executeQuery(query);
 			
@@ -323,7 +330,7 @@ public final class AuthorityControl {
 			.map(patt::matcher)
 			.flatMap(Matcher::results)
 			.sorted((mr1, mr2) -> Long.compare(Long.parseLong(mr1.group(1)), Long.parseLong(mr2.group(1))))
-			.collect(Collectors.toList());
+			.toList();
 		
 		var worklist = new LinkedHashMap<Map.Entry<Path, Path>, SortedSet<Long>>(indexes.size(), 1.0f);
 		
@@ -403,11 +410,16 @@ public final class AuthorityControl {
 				.map(template -> String.format("'%s'", template.replace(' ', '_')))
 				.collect(Collectors.joining(","));
 			
-			var query = "SELECT page_title"
-				+ " FROM page INNER JOIN templatelinks on tl_from = page_id"
-				+ " WHERE tl_from_namespace = 0"
-				+ " AND tl_namespace = 10"
-				+ " AND tl_title in (" + templates + ");";
+			var query = String.format("""
+				SELECT
+					page_title
+				FROM page
+					INNER JOIN templatelinks on tl_from = page_id
+				WHERE
+					tl_from_namespace = 0 AND
+					tl_namespace = 10 AND
+					tl_title in (%s);
+				""", templates);
 			
 			var rs = connection.createStatement().executeQuery(query);
 			
@@ -427,10 +439,11 @@ public final class AuthorityControl {
 		var articles = new HashSet<String>(2000000);
 		
 		try (var connection = DriverManager.getConnection(SQL_PLWIKI_URI, prepareSQLProperties())) {
-			var query = "SELECT page_title"
-				+ " FROM page"
-				+ " WHERE page_namespace = 0"
-				+ " AND page_is_redirect = 0;";
+			var query = """
+				SELECT page_title
+				FROM page
+				WHERE page_namespace = 0 AND page_is_redirect = 0;
+				""";
 			
 			var rs = connection.createStatement().executeQuery(query);
 			
