@@ -48,12 +48,17 @@ public final class UnsourcedUkrainianEntries {
 	private static Wikibot wb;
 	
 	static {
-		PAGE_INTRO =
-			"Hasła ukraińskie, w których przynajmniej jedno znaczenie nie zostało uźródłowione przy użyciu " +
-			"dowolnego szablonu z [[:Kategoria:Szablony źródeł (ukraiński)]].\n\n" +
-			"Znaleziono %s. Aktualizacja: ~~~~~.\n" +
-			"__NOEDITSECTION__\n{{TOCright}}\n{{język linków|ukraiński}}\n\n" +
-			"%s";
+		PAGE_INTRO = """
+			Hasła ukraińskie, w których przynajmniej jedno znaczenie nie zostało uźródłowione przy użyciu
+			dowolnego szablonu z [[:Kategoria:Szablony źródeł (ukraiński)]].
+			
+			Znaleziono %s. Aktualizacja: ~~~~~.
+			__NOEDITSECTION__
+			{{TOCright}}
+			{{język linków|ukraiński}}
+			
+			%s
+			""";
 		
 		var polishWords = new WordForms[] {
 			new WordForms(new String[] {"hasło", "hasła", "haseł"}),
@@ -69,11 +74,11 @@ public final class UnsourcedUkrainianEntries {
 		
 		var sourceTmpls = wb.getCategoryMembers(SOURCES_CATEGORY, Wiki.TEMPLATE_NAMESPACE).stream()
 			.map(wb::removeNamespace)
-			.collect(Collectors.toList());
+			.toList();
 		
 		var ignoredHeaderTmpls = wb.getCategoryMembers(IGNORED_DEF_TEMPLATES_CATEGORY, Wiki.TEMPLATE_NAMESPACE).stream()
 			.map(wb::removeNamespace)
-			.collect(Collectors.toList());
+			.toList();
 		
 		System.out.printf("%d templates: %s%n", sourceTmpls.size(), sourceTmpls);
 		
@@ -83,7 +88,7 @@ public final class UnsourcedUkrainianEntries {
 			.filter(s -> !hasAllDefinitionsSourced(s, sourceTmpls, ignoredHeaderTmpls))
 			.map(f -> f.getContainingPage().get().getTitle())
 			.sorted(Collator.getInstance(new Locale("uk")))
-			.collect(Collectors.toList());
+			.toList();
 		
 		var sublist = titles.subList(0, RESULT_LIMIT);
 		
